# gudev16

./: Cargo.toml  Trunk.toml  flake.nix  index.html  pbcopy  sequence.md  term.tmp.rs
assets/: scripted_text.csv
site/: index.html  index.js
src/: browser.rs  colors.rs  main.rs  timer.rs  win.rs  window.rs
src/chat/: display.rs  logic.rs  mod.rs  scripted.rs
src/terminal/: display.rs  logic.rs  mod.rs  tree.rs
